--- a/clients/frontend/index.html
+++ b/clients/frontend/index.html
@@ -15,7 +15,7 @@
       <img src="./server_image.svg" alt="logo" class="w-16">
       <div class="flex flex-col">
         <b><h1 class="font-outfit text-2xl">Mizban</h1></b>
-        <p>light & fast LAN file-sharing</p>
+        <p>LAN File Transfer Made Easy!</p>
       </div>
     </div>
   </header>
