--- a/clients/frontend/index.html
+++ b/clients/frontend/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mizban - LAN File Sharing</title>
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/output.css">
   </head>
   
 <body class="bg-[#FAFAFA]">
   <header class="w-full p-6">
     <div class="flex items-center gap-4 container">
-      <img src="./server_image.svg" alt="logo" class="w-16">
+      <img src="icons/server_image.svg" alt="logo" class="w-14">
       <div class="flex flex-col">
         <b><h1 class="font-outfit text-2xl">Mizban</h1></b>
-        <p>LAN File Transfer Made Easy!</p>
+        <p class="font-oswald oswald-light">Your Light & Fast LAN File Transfer 🚀</p>
+
       </div>
     </div>
   </header>
   
   <main>
     <button id="uploadButton" class="container flex justify-center items-center text-white mt-6 py-2 gap-4 rounded-3xl bg-gradient-to-r from-primary to-secondary hover:from-[#24ACD1] hover:to-[#4B5094] transition-all duration-200">
-      <img src="./upload_icon.svg" alt="upload_icon" class="w-10">
+      <img src="icons/upload_icon.svg" alt="upload_icon" class="w-10">
       <p class="text-2xl font-oswald">Upload File</p>
    </button>
    
